--- a/src/main/resources/static/usuarios.html
+++ b/src/main/resources/static/usuarios.html
@@ -455,7 +455,7 @@
     <script src="vendor/datatables/jquery.dataTables.min.js"></script>
     <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
-    <!-- Page level custom scripts -->
+    <!-- listar usuarios-->
     <script src="js/datatable_usuarios.js"></script>
 
 </body>
